More responsive styling
-Mobile static hero images put in place, media query removing video
-Responsive styling placed throughout Meet CCA

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					<p>Brandi's daughter poses at Children's Fairyland.</p>
 					<p class="italc cred">Courtesy of Brandi Riley</p>
 				</div>
-				<div class="caption">
+				<div class="xs-display-none caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
@@ -334,7 +334,7 @@
 				<h5>Shorebird Park Nature Center and Adventure Playground</h5>
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you’ve ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo’s favorite part of the entire day!</p>
 			</div>
-			<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/brandi/Brandi2.jpg">
 			</div>
 		</div>
@@ -445,7 +445,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-6">
+			<div class="col-sm-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">1</div>
@@ -463,12 +463,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-6 col-md-offset-6 animateblock btm">
+			<div class="col-sm-12 col-md-6 col-md-offset-6 animateblock btm">
 				<a class="fancybox" href="images/camp-ca/steep-ravine.jpg"><img src="images/camp-ca/steep-ravine.jpg"></a>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-6">
+			<div class="col-sm-12 col-md-6">
 				<div class="scroll-list-box">
 					<div class="box-header">
 						<div class="box-header-num">2</div>
@@ -586,7 +586,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row tout">
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
 				<img src="assets/CA Logo_Dream Big_Color.png" class="vca-logo-color">
@@ -1085,12 +1085,12 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
+			<div class="col-xs-10 col-md-8 col-md-offset-2">
 				<h2>As cars zip between Los Angeles and San Francisco on the I-5 and U.S. Highway 101, Central California is quietly living the good life. </h2>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>While San Francisco is considered a technology hub and Los Angeles boasts a booming entertainment industry, there’s a lot to be seen between the two major cities. Central California has charming towns dotting the coastline, and destinations like Yosemite National Park farther inland. The valley yields a quarter of all produce and 40% of nuts, fruits and other foods in the U.S., and from crops to coastline, Central California is a friendly and relaxed swath of the Golden State to explore.</p>
 
 				<h3>On the Water</h3>
@@ -1098,7 +1098,7 @@
 
 				<p>Hop back in the car and snake up the coast, passing historic and charming San Luis Obispo, stopping for a California history lesson at the Mission San Luis Obispo de Tolosa. Then veer onto The Pacific Coast Highway (Highway 1, or PCH as locals call it). Designate a family member as a photographer to capture the views.</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="col-xs-5 col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/meet-cca/meet-cca1.jpg">
 				<div class="caption">
 					<p>Santa Barbara Mission</p>
@@ -1107,10 +1107,10 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="xs-display-none col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca2.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="xs-display-none col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1130,17 +1130,17 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>Just before reaching Monterey Bay, stretch your legs in Carmel-by-the-Sea. This enchanting coastal town just south of Monterey is like a California-set fairytale. Stroll the quaint streets of downtown and wander into shops and restaurants, or head to the water for a day at the beach (Carmel Beach is dog-friendly, so furry friends can get in on the fun). Golfers should make a pilgrimage to The Golf Links at the Pebble Beach Resorts, rated the number one public course in the U.S., and kids will find ample amounts of fun, including horseback riding on the beach and story time and crafts at the local library.</p>
 
 				<p>One cannot cruise up the PCH without stopping in Santa Cruz. Kids will love a trip to the Santa Cruz Beach Boardwalk, an amusement park (complete with the wooden Giant Dipper roller coaster, which first rolled out in 1924).</p>
 			</div>
-			<div class="col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/meet-cca/meet-cca3.jpg">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-xs-12 col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca4.jpg">
 				<div class="caption">
 					<p class="italc cred inline">Chris Hendrickson/Getty Images</p>
@@ -1148,7 +1148,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<h3>Inland Exploring</h3>
 				<p>Attractions east of the coastline are just as dazzling as their oceanfront counterparts. Some of the coolest adventures might be right under your nose, as in <a href="http://www.visitcalifornia.com/feature/13-ways-go-underground-california">way underground</a>. Start with a tour of the massive underground chamber at Moaning Caverns Adventure Park—the vertical chamber is large enough to fit the Statue of Liberty. Families can go on guided walking tours into the cave, or opt to rappel down 165 feet into the cavern (best for older adventurers). Back above ground, take flight on zip lines that run above the foothills.</p>
 
@@ -1156,13 +1156,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="xs-display-none col-md-7">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca6.jpg">
 			</div>
-			<div class="col-md-5 r-rail-above">
+			<div class="col-xs-5 col-md-5 r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/meet-cca/meet-cca5.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="xs-display-none col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1182,12 +1182,12 @@
 			</div>
 		</div>	
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-xs-6 col-md-6">
 				<p>Forty miles east of Yosemite Valley sits Mono Lake (“Mono” rhymes with “yoyo,” FYI), with its otherworldly landscape of strange rock forms. The visitor center, just off U.S. 395 north of Lee Vining and Tioga Pass, offers a wealth of information and scientific exploration.</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-9">
+			<div class="col-xs-12 col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca7.jpg">
 				<div class="caption">
 					<p>Mono Lake Beach</p>
