Mobile ToC Added + Responsive sizes to Desktop

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </section>
 
 <section class="container-fluid toc clearfix" id="toc">
+<div id="desktop-toc">	
 	<div class="row">
 		<div class="col-xs-4 col-md-4 toc-nca">
 			<div class="toc-bg-container">
@@ -123,6 +124,74 @@
 	  		</ul>
 		</div>
 	</div>
+</div>
+<div id="mobile-toc">	
+	<div class="row">
+		<div class="col-xs-12 col-md-12 toc-nca">
+			<div class="toc-bg-container">
+				<div class="toc-nca-bg mobile-toc-bg"></div>
+			</div>
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#nrthrn-blog-post">
+	  				<div class="blogger-circle"></div>
+	  				<div class="toc-with">with<br>
+					Brandi Riley</div></a></li>
+	  			<li class="toc-plus">More Ways to Play</li>
+	    		<li><a href="#camp-ca">Camp California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#photo-op">Photo Op: Share-Worthy Northern California Spots</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#article-roadtrip">The Anti “Are We There Yet?” Road Trip</a></li>
+	    		<li role="separator" class="divider"></li> 
+	    		<li><a href="#kid-attractions">8 Must-See Kid-Friendly Attractions</a></li>
+	  		</ul>
+		</div>
+		<div class="col-xs-12 col-md-12 toc-cca">
+			<div class="toc-bg-container">
+				<div class="toc-cca-bg mobile-toc-bg"></div>
+			</div>
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">CENTRAL CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#cntrl-blog-post">
+	  				<div class="blogger-circle"></div>
+	  				<div class="toc-with">with</br>
+	  				Pattie Cordova</div></a></li>
+	  			<li class="toc-plus">More Ways to Play</li>
+			    <li><a href="#eduvacation">Edu(va)cation</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#article-meet-cca">Get to Know Central California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#must-see-parks">4 Outdoor Adventures in Central California</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#article-eats">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	  		</ul>
+		</div>
+		<div class="col-xs-12 col-md-12 toc-sca">
+			<div class="toc-bg-container">
+				<div class="toc-sca-bg mobile-toc-bg"></div>
+			</div>
+			<ul class="toc-menu">
+	  			<li class="nav-explore">EXPLORE</li>
+	  			<li class="toc-region">SOUTHERN CALIFORNIA</li>
+	  			<li class="toc-blogger"><a href="#sthrn-blog-post">
+	  				<div class="blogger-circle"></div>
+	  				<div class="toc-with">with</br>
+	  				Justine Howell</div></a></li>
+	  			<li class="toc-plus">More Ways to Play</li>
+	  			<li><a href="#theme-parks">Thrills, Chills, and Enchantments</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#article-surf-skate">Surf ’n Skate</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
+	    		<li role="separator" class="divider"></li>
+	    		<li><a href="#video-bella">Bella Kenworthy Brings Girl Power to the Skate Park</a></li>
+	  		</ul>
+		</div>
+	</div>
+</div>
 </section>
 
 <section class="sticky-nav clearfix" id="sticky-nav">
