Justine Blog Reflowed, Caption, Optimized

--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@
 			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/justine/KnottsBerryFarm.jpg">
 				<div class="caption">
-					<p>Camp Snoopy at Knott's Berry Farm. <span class="italc cred inline">Getty Images</span></p>
+					<p>Camp Snoopy at Knott's Berry Farm. </br> <span class="italc cred inline no-left-margin">Courtesy of Knott's Berry Farm</span></p>
 				</div>
 			</div>
 		</div>
@@ -1501,16 +1501,16 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Homer and the gang outside the Kwik-E-Mart.</p>
+					<p class="italc cred">Courtesy of Universal Studios Hollywood</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Characters at LEGOLAND pose outside the LEGOLAND Hotel.</p>
+					<p class="italc cred">LEGOLAND California Resort</p>
 				</div>
 			</div>
 		</div>
@@ -1518,13 +1518,13 @@
 			<div class="col-xs-6 col-md-6">
 				<h4>5</h4>
 				<h3>LEGOLAND</h3>
-				<p>A fun place for younger kids, especially those who love building! There are not only fun rides at LEGOLAND but building stations, a great waterpark, and Sea Life Aquarium adjacent to the park as well. It’s fascinating what they’ve made out of LEGO bricks!</p>
+				<p>A fun place for younger kids, especially those who love building! There are not only fun rides at LEGOLAND but building stations, a great waterpark, and Sea Life Aquarium adjacent to the park as well. It’s fascinating what they’ve made out of LEGO® bricks!</p>
 				<p class="italc">Let’s move on to a few water locations we love in Southern California! Some of them you may have heard of, and others are hidden gems that are must-sees during your visit here.</p>
 				<h4>6</h4>
 				<h3>SeaWorld San Diego</h3>
 				<p>This park has changed a lot over the years and even has a few roller coasters too! Our favorite attractions are still the shows (with seasonal offerings as well), and the hands-on exhibits are always a hit.</p>
 				<h4>7</h4>
-				<h3>The Queen Mary</h3>
+				<h3>The <span class="italc">Queen Mary</span></h3>
 				<p>This floating hotel in Long Beach offers tours. Even my kids thought it was fascinating to see the artifacts and the exhibits on the ship. In the winter months there’s the <a href="http://temeculablogs.com/queen-mary-ice-kingdom-discounted-tickets/">Queen Mary CHILL</a> with ice sculptures, tubing, skating, and more (this has become our annual tradition).</p>
 				<h4>8</h4>
 				<h3>Aquarium of the Pacific</h3>
@@ -1553,16 +1553,16 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Harbor seals and sea lions catch rays in La Jolla.</p>
+					<p class="italc cred">Courtesy of Justine Howell</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Getting up close and personal with fish at the Aquarium of the Pacific.</p>
+					<p class="italc cred">Courtesy of Justine Howell</p>
 				</div>
 			</div>
 		</div>
@@ -1599,7 +1599,7 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>San Clemente pier. <span class="italc cred inline">Getty Images</span></p>
+					<p>San Clemente pier. <span class="italc cred inline">Compassandcamera/Getty Images</span></p>
 				</div>
 			</div>
 		</div>
@@ -1622,7 +1622,7 @@
 				<p class="italc">Now we’re moving right along to several fun children’s museums we have here in Southern California that we visit quite often and are a must-see!</p>
 				<h4>18</h4>
 				<h3>Discovery Cube OC</h3>
-				<p>One of our all-time favorite hands-on museums for children in Orange County is called Discovery Cube OC. Throughout the year they offer different exhibits and incredible shows like the Bubblefest you see here! Children can pretend they’re hockey players, shop at a grocery store meant just for them, learn all about hurricanes and much more. It’s three stories full of fun, and you can easily spend the whole day there!</p>
+				<p>One of our all-time favorite hands-on museums for children in Orange County is called Discovery Cube. Throughout the year they offer different exhibits and incredible events like Bubblefest. Children can pretend they’re hockey players, shop at a grocery store meant just for them, learn all about hurricanes and much more. It’s three stories full of fun, and you can easily spend the whole day there!</p>
 				<h4>19</h4>
 				<h3>Pennypickle’s Workshop</h3>
 				<p>Another hidden gem! We love visiting small places like this one and sharing them with others. Although it’s on a smaller scale, this children’s museum is very interactive and is located in a quaint area of Old Town Temecula, which is fun to walk around after your visit there.</p>
@@ -1640,7 +1640,7 @@
 			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_6.jpg">
 				<div class="caption">
-					<p>Bates Nut Farm.<span class="italc cred inline">Getty Images</span></p>
+					<p>Feeding the animals at Bates Nut Farm.<span class="italc cred inline">Courtesy of Justine Howell</span></p>
 				</div>
 			</div>
 		</div>
@@ -1657,16 +1657,16 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>A hiker pauses at Idyllwild.</p>
+					<p class="italc cred">Thomas Northcut/Getty Images</p>
 				</div>
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<p class="italc cred">Getty Images</p>
+					<p>Follow the winding paths at the Santa Rosa Plateau Ecological Reserve.</p>
+					<p class="italc cred">Jack Goldfarb/Getty Images</p>
 				</div>
 			</div>
 		</div>
