--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 		<div class="row">
 			<div class="col-xs-10 col-md-9">
 				<h1>Brandi's Guide To Northern California</h1>
-				<h2>The mama behind <span class="italc">Mama Knows It All</span> shares her favorite places to play with her family.</h2>
+				<h2>The mama behind Mama Knows It All shares her favorite places to play with her family.</h2>
 				<div class="blogger-profile-wrap clearfix">
 					<div class="left-quadrant">
 						<div class="btm-row">
@@ -533,7 +533,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-md-8 col-md-offset-2">
-				<h2>Northern California offers some of the most stunning and diverse campsites in the world—explore these six options.</h2>
+				<h2>Northern California offers some of the most stunning and diverse campsites in the world. Explore these six options.</h2>
 				<p>Whether you want to sleep at the feet of giants in Redwoods National Park or wake up at the water’s edge in Lake Tahoe, adventure seekers will marvel at Northern California’s options. From off-the-grid rustic sites to the ultimate glamping experience, here are six options for planning your next camping excursion.</p>
 			</div>
 		</div>
@@ -616,7 +616,7 @@
 					<div class="text-wrapper">
 						<h5>Point Reyes National Seashore</h5>
 						<p>Up for an adventure? First, buy some fresh oysters at the Marshall Store, rent a kayak at Blue Waters Kayaking, and load up your gear for a one-hour paddle to the boat-in only Tomales Bay campsites. After you set up camp on the beach, hike the steep hill for a breathtaking view of Tomales Bay.</p>
-						<p><span class="bold">What to do:</span> Check out Pierce Point Ranch, where you can catch a glimpse of the nearly 400 tule elk in residence at the Tule Elk Reserve. Visitors to the Kenneth C. Patrick Visitor Center at Drakes Beach can learn about 16th-century maritime exploration and check out the minke whale skeleton on display.</p>
+						<p><span class="bold">What to do:</span> Check out Pierce Point Ranch, where you can catch a glimpse of the many tule elk in residence in residence at the Tule Elk Reserve.</p>
 						<div class="caption">
 							<p class="italc cred">Yhelfman/Getty Images</p>
 						</div>
@@ -698,7 +698,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<p>Imagine a place where towering trees meet rugged coastline, and small friendly towns greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for any family looking to capture some of Northern California’s charms.</p>
+				<p>Imagine a place where towering trees meet rugged coastline, and friendly locals greet visitors with open arms (holding cups of artisanal coffee and mason jars of craft beer). Northern California, with its massive scale and otherworldly beauty, gives off an almost mystical vibe—the yin to Southern California’s yang. Here are four must-see spots for families looking to capture some of Northern California’s charms.</p>
 			</div>
 		</div>
 	</div>
@@ -729,7 +729,7 @@
 			<li class="hideContentHeader"><h1>Mendocino</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
-					<p>Three hours north of San Francisco is the coastal cool town of Mendocino. Kids will love exploring Glass Beach, located about 10 miles north of the town of Mendocino, where deposits of colorful sea glass rest along the coves. One theory for the washed up treasure is that the sea glass is “mermaid tears,” shed every time a sailor is lost at sea. Just be sure not to take any of the glass with you—it’s best left on the beach for other visitors. On the way back to town, visit the Mendocino Coast Botanical Gardens to snap some pictures of its expansive collection of blooms, including its famous rhododendrons. Thirty miles south of town, check out the B Bryan Preserve, where you capture snaps of exotic animals like antelopes, kudus, zebras, and giraffes.</p>
+					<p>Three hours north of San Francisco is the coastal cool town of Mendocino. Kids will love exploring Glass Beach, located about 10 miles north of the town of Mendocino, where deposits of colorful sea glass rest along the coves. One theory for the washed up treasure is that the sea glass is “mermaid tears,” shed every time a sailor is lost at sea. Just be sure not to take any of the glass with you—it’s best left on the beach for other visitors. On the way back to town, visit the Mendocino Coast Botanical Gardens to snap some pictures of its expansive collection of blooms, including its famous rhododendrons. Thirty miles south of town, check out the B. Bryan Preserve, where you capture snaps of exotic animals like antelopes, kudus, zebras, and giraffes.</p>
 					<p class="italc cred">John Elk/Getty Images</p>
 				</div>
 			</li>
@@ -1043,7 +1043,7 @@
 			<div class="col-xs-6 col-md-6">
 				<p>Solvang is still home to bakeries, restaurants, and merchants who have continued to offer a taste of Denmark through its food, landscape, and museums.</p>
 				<h5>You can find us at...</h5>
-				<p>shoe store trying on a pair of clogs, the local bookstore peeking into the Hans Christian Andersen museum upstairs, and, of course, around Copenhagen replicas like the Little Mermaid statue and the Round Tower, taking family pictures. We’ll also be stopping by Old Mission Santa Inés near the center of town. Just outside of Solvang, we’ll stop by OstrichLand USA—a ranch where visitors can see ostriches, feed them, and even buy their eggs!</p>
+				<p>The shoe store trying on a pair of clogs, the local bookstore peeking into the Hans Christian Andersen museum upstairs, and, of course, around Copenhagen replicas like the Little Mermaid statue and the Round Tower, taking family pictures. We’ll also be stopping by Old Mission Santa Inés near the center of town. Just outside of Solvang, we’ll stop by OstrichLand USA—a ranch where visitors can see ostriches, feed them, and even buy their eggs!</p>
 				<h4>Day 3</h4>
 				<h3>Central Valley</h3>
 				<p>Covering a large piece of California is the Central Valley. This area is known for producing an abundance of fresh fruits, vegetables, and greenery, coupled with its small-town feel and country atmosphere. Highway 99 will take you where you need to go, but your family will enjoy discovering off-the-beaten-path destinations the most.</p>
@@ -1189,12 +1189,12 @@
 				<h3>On the Water</h3>
 				<p>For an iconic road trip, cruise up the Central California coastline. Start in Santa Barbara, a friendly town full of family fun. Don’t miss the zoo and botanic garden.</p>
 
-				<p>Hop back in the car and snake up the coast, passing historic and charming San Luis Obispo, stopping for a California history lesson at the Mission San Luis Obispo de Tolosa. Then veer onto The Pacific Coast Highway (Highway 1, or PCH as locals call it). Designate a family member as a photographer to capture the views.</p>
+				<p>Hop back in the car and snake up the coast, passing historic and charming San Luis Obispo, stopping for a California history lesson at the Old Mission San Luis Obispo de Tolosa. Then veer onto The Pacific Coast Highway (Highway 1, or PCH as locals call it). Designate a family member as a photographer to capture the views.</p>
 			</div>
 			<div class="col-xs-5 col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/meet-cca/meet-cca1.jpg">
 				<div class="caption">
-					<p>Santa Barbara Mission</p>
+					<p>Take a stroll in historic Santa Barbara.</p>
 					<p class="italc cred inline no-left-margin">Sashahaltam/Shutterstock</p>
 				</div>
 			</div>
@@ -1209,7 +1209,7 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Bigby Bridge, Big Sur</p>
+					<p>Pull over at a turnout to snap a picture of the iconic Bixby Bridge.</p>
 					<p class="italc cred">Thomas Kurmeier/Getty Images</p>
 				</div>
 				<div class="caption">
@@ -1217,7 +1217,7 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Montana De Oro State Park</p>
+					<p>Montana De Oro State Park.</p>
 					<p class="italc cred">Ron Thomas/Getty Images</p>
 				</div>
 			</div>
@@ -1302,7 +1302,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>The phrase “great outdoors” gets new meaning in California. These spots serve up some of the most breathtaking views, landscapes, and excursions in the country—and even the world. Here's a must-see list for a family of explorers.</h2>
+				<h2>The phrase 'great outdoors' gets new meaning in California. These spots serve up some of the most breathtaking views, landscapes, and excursions in the country—and even the world. Here's a must-see list for a family of explorers.</h2>
 			</div>
 		</div>
 	</div>
@@ -1336,7 +1336,7 @@
 			<li class="hideContent">
 				<h4>Sequoia and Kings Canyon National Parks</h4>
 				<div class="text-box">
-					<p>These two parks sit side by side in the southern Sierra Nevada east of the San Joaquin Valley, and boast dramatic landscapes, huge mountains, rugged foothills, deep caverns, and caves to explore. But it’s the immense sequoias, considered the world’s most majestic trees, that will grab the family’s undivided attention. Kids will love exploring on day hikes (look for paved trails for younger ones), adventuring on an overnight wilderness trip, or learning about the park via a ranger-led program, like the Kids’ Campfire Talks. And a bonus for any family with a fourth-grade student: You can earn a free pass through the Every Kid in a Park program.</p>
+					<p>These two parks sit side by side in the southern Sierra Nevada east of the San Joaquin Valley, and boast dramatic landscapes, huge mountains, rugged foothills, deep caverns, and caves to explore. But it’s the immense sequoias, considered the world’s most majestic trees, that will grab the family’s undivided attention. Kids will love exploring on day hikes (look for paved trails for younger ones), adventuring on an overnight wilderness trip, or learning about the park via a ranger-led program, like the Kids' Campfire Talks. And a bonus for any family with a fourth-grade student: You can earn a free pass through the Every Kid in a Park program.</p>
 					<p class="italc cred">Buck Forester/Getty Images</p>
 				</div>
 			</li>
@@ -1367,7 +1367,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Central California is an agricultural powerhouse—</br>it’s no wonder that it’s packed with fun, fresh places to eat.</h2>
+				<h2>Central California is an agricultural powerhouse—</br>it's no wonder that it's packed with fun, fresh places to eat.</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -1525,7 +1525,7 @@
 				<p>This park has changed a lot over the years and even has a few roller coasters too! Our favorite attractions are still the shows (with seasonal offerings as well), and the hands-on exhibits are always a hit.</p>
 				<h4>7</h4>
 				<h3>The <span class="italc">Queen Mary</span></h3>
-				<p>This floating hotel in Long Beach offers tours. Even my kids thought it was fascinating to see the artifacts and the exhibits on the ship. In the winter months there’s the <a href="http://temeculablogs.com/queen-mary-ice-kingdom-discounted-tickets/">Queen Mary CHILL</a> with ice sculptures, tubing, skating, and more (this has become our annual tradition).</p>
+				<p>This floating hotel in Long Beach offers tours. Even my kids thought it was fascinating to see the artifacts and the exhibits on the ship. In the winter months there’s the Queen Mary CHILL with ice sculptures, tubing, skating, and more (this has become our annual tradition).</p>
 				<h4>8</h4>
 				<h3>Aquarium of the Pacific</h3>
 				<p>This is quite a large aquarium, located in Long Beach, with a lot of outside exhibits, such as a penguin habitat and shark-touch pools that we haven’t seen anywhere else!</p>
@@ -1534,7 +1534,7 @@
 				<p>Located in La Jolla, this aquarium offers a lot of hands-on exhibits for kids, and half of the facility is outdoors, which we love! Featuring interactive exhibits and exciting science displays, it’s great for little hands and in an absolutely gorgeous location overlooking the beach.</p>
 				<h4>10</h4>
 				<h3>Tide Pools</h3>
-				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in <a href="http://temeculablogs.com/la-jolla-tide-pools/">La Jolla, called Children’s Pool</a>. There’s a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
+				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in La Jolla, called Children’s Pool. There’s a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
 			</div>
 			<div class="xs-display-none col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/legoland.jpg">
