Camp CA mobile responsive

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12 col-md-6">
-				<div class="scroll-list-box">
+				<div class="scroll-list-box first">
 					<div class="box-header">
 						<div class="box-header-num">1</div>
 						<span class="stop-name">Steep Ravine Environmental Campground</span>
@@ -586,7 +586,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
-					<div class="box-header one-line">
+					<div class="box-header">
 						<div class="box-header-num">3</div>
 						<span class="stop-name">Beach Camp</span>
 					</div>
@@ -609,7 +609,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<div class="scroll-list-box">
-					<div class="box-header one-line">
+					<div class="box-header">
 						<div class="box-header-num">4</div>
 						<span class="stop-name">Tomales Bay State Park</span>
 					</div>
@@ -1795,7 +1795,7 @@
 				<h4>Universal Studios Hollywood</h4>
 				<div class="text-box">
 					<p>Discover the excitement of movie-making magic at one of Southern California’s most legendary theme parks, set on the grounds of an active film and television studio. In addition to spine-tingling rides that land you in the center of scenes from movies, you can see where those films were made on Universal’s famed Studio Tour. The new Wizarding World of Harry Potter™ lets you explore the magic of Hogwarts™ Castle, peruse the shops in Hogsmeade™, and experience heart-pounding Harry Potter–themed rides. Meanwhile, Springfield, which opened last year, lets you visit the town made famous in the hit animated series The Simpsons™. Grab a bite at Krusty Burger, and rocket through Krustyland on the popular Simpsons™ ride.</p>
-					<p><span class="italc">HARRY POTTER characters, names and related indicia are © & ™ Warner Bros. Entertainment Inc. Harry Potter Publishing Rights © JKR. (s16) © 2016 Universal Studios. All rights reserved.</span>
+					<p><span class="italc">HARRY POTTER characters, names and related indicia are &copy; &amp; ™ Warner Bros. Entertainment Inc. Harry Potter Publishing Rights © JKR. (s16) © 2016 Universal Studios. All rights reserved.</span>
 					<p class="italc cred">Tk</p>
 					</p>
 				</div>
@@ -1976,7 +1976,6 @@
 </section>
 
 <!-- BELLA VIDEO -->
-<<<<<<< HEAD
 <!-- <svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
 	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
 	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
