--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 </section>
 
 <section class="hero full-page" id="main-hero">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
-	<img src="images/title.svg" class="main-title">
+	<img src="images/title-svg-logo.svg" class="main-title" id="main-title-logo">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
