Bridget's Final Round of Text Corrections

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 					<h5>Chinatown</h5>
 					<p>San Francisco's Chinatown neighborhood is one of my favorite places in the city. It's so full of color, and there are tons of little surprises in every single shop you go into. The best part of Chinatown is that you get to experience the slopes and hills that San Francisco is known for!</p>
 					<h5>Golden Gate Bridge</h5>
-					<p>Since it's one of the most iconic bridges in the country, you have to go over the Golden Gate bridge if you're in Northern California. Every few weeks I try to sweet-talk my husband into driving me over the bridge because I absolutely love the views! Not only will your kids be impressed by the sheer size and beauty of the bridge, but it takes you to one of the most lovely little cities in our area.</p>
+					<p>Since it's one of the most iconic bridges in the country, you have to go over the Golden Gate Bridge if you're in Northern California. Every few weeks I try to sweet-talk my husband into driving me over the bridge because I absolutely love the views! Not only will your kids be impressed by the sheer size and beauty of the bridge, but it takes you to one of the most lovely little cities in our area.</p>
 					<h5>Sausalito</h5>
 				</div>
 				<div class="col-md-5 col-md-offset-1 col-xs-5 col-xs-offset-1">
@@ -681,7 +681,7 @@
 		</div>
 		<div class="row tout">
 			<div class="col-xs-12 col-md-8 col-md-offset-2">
-				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
+				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter" target="_blank">here</a>.</p>
 				<img src="assets/CA Logo_Dream Big_Color.png" class="vca-logo-color">
 			</div>
 		</div>
@@ -729,7 +729,7 @@
 			<li class="hideContentHeader"><h1>Mendocino</h1></li>
 			<li class="hideContent">
 				<div class="text-box">
-					<p>Three hours north of San Francisco is the coastal cool town of Mendocino. Kids will love exploring Glass Beach, located about 10 miles north of the town of Mendocino, where deposits of colorful sea glass rest along the coves. One theory for the washed up treasure is that the sea glass is "mermaid tears," shed every time a sailor is lost at sea. Just be sure not to take any of the glass with you—it's best left on the beach for other visitors. On the way back to town, visit the Mendocino Coast Botanical Gardens to snap some pictures of its expansive collection of blooms, including its famous rhododendrons. Thirty miles south of town, check out the B. Bryan Preserve, where you capture snaps of exotic animals like antelopes, kudus, zebras, and giraffes.</p>
+					<p>Three hours north of San Francisco is the coastal cool town of Mendocino. Kids will love exploring Glass Beach, located about 10 miles north of the town of Mendocino, where deposits of colorful sea glass rest along the coves. One theory for the washed up treasure is that the sea glass is "mermaid tears," shed every time a sailor is lost at sea. Just be sure not to take any of the glass with you—it's best left on the beach for other visitors. On the way back to town, visit the Mendocino Coast Botanical Gardens to snap some pictures of its expansive collection of blooms, including its famous rhododendrons. Thirty miles south of town, check out the B. Bryan Preserve, where you can capture snaps of exotic animals like antelopes, kudus, zebras, and giraffes.</p>
 					<p class="italc cred">John Elk/Getty Images</p>
 				</div>
 			</li>
@@ -792,7 +792,7 @@
 									<div class="box-header-num">2</div>
 									<span class="stop-name">Myers Flat and</br>the Shrine Tree</span>
 								</div>
-								<p>There are three redwoods you can drive a car through in California. The Shrine Drive-Tbrough iTree has the distinction of being the only one hollowed out by nature. Goose pens, as these interior spaces are known, are caused by fires, which burn out the interior of the tree but leave the exterior intact <span class="italc">and</span> alive. You'll pay a small fee to pass through this privately owned redwood. Stop off in Myers Flat for the locally lauded Daily Grind espresso house or a visit to Riverbend Cellars for a laid back local wine tasting. If you have young kids, venture a mile farther to the Williams Grove day use area where you'll access the Children's Forest trail. This quiet, pretty 2-mile loop has plenty of fun exploration opportunities for little ones.</p>
+								<p>There are three redwoods you can drive a car through in California. The Shrine Drive-Through Tree has the distinction of being the only one hollowed out by nature. Goose pens, as these interior spaces are known, are caused by fires, which burn out the interior of the tree but leave the exterior intact <span class="italc">and</span> alive. You'll pay a small fee to pass through this privately owned redwood. Stop off in Myers Flat for the locally lauded Daily Grind espresso house or a visit to Riverbend Cellars for a laid back local wine tasting. If you have young kids, venture a mile farther to the Williams Grove day use area where you'll access the Children's Forest trail. This quiet, pretty 2-mile loop has plenty of fun exploration opportunities for little ones.</p>
 							</div>
 						</div>
 					</li>
@@ -888,7 +888,7 @@
 			<li class="hideContent">
 				<h4>Gilroy Gardens Family Theme Park</h4>
 				<div class="text-box">
-					<p>Think traditional amusement park for younger kids with an earth-friendly twist. Each of the park's 40 rides and attractions, including a Ferris wheel and carousels, are built around six lush gardens. There are also learning sheds showing vignettes on conservation and the park's greenery. Gilroy is also home to the Circus Trees, which are trees shaped and woven together to create complex designs, a basket, arch and zig-zag. The park's water-filled play areas will let you make a splash on even the hottest of days.</p>
+					<p>Think traditional amusement park for younger kids with an earth-friendly twist. Each of the park's 40 rides and attractions, including a Ferris wheel and carousels, are built around six lush gardens. There are also learning sheds showing vignettes on conservation and the park's greenery. Gilroy is also home to the Circus Trees, which are trees shaped and woven together to create complex designs, such as a basket, arch, and zig-zag. The park's water-filled play areas will let you make a splash on even the hottest of days.</p>
 					<p class="italc cred">Courtesy of Gilroy Gardens</p>
 				</div>
 			</li>
@@ -936,7 +936,7 @@
 			<li class="hideContent">
 				<h4>Fairytale Town</h4>
 				<div class="text-box">
-					<p>Built in 1959 inside William Land Park, Fairytale Town boasts 25 playsets based on different nursery rhymes and fairy tales, including Farmer Brown's Barn that is home to three blind mice, a schoolhouse with Mary's Little Lambs, which has real sheep grazing, and an Old Woman in the Shoe slide. Little ones can also meet a miniature Sicilian donkey named Eeyore, as well as Charlotte the spider and Daisy the cow, a miniature Hereford heifer.</p>
+					<p>Built in 1959 inside William Land Park, Fairytale Town boasts 25 playsets based on different nursery rhymes, and fairytales, including Farmer Brown's Barn that is home to three blind mice, a schoolhouse with Mary's Little Lambs, which has real sheep grazing, and an Old Woman in the Shoe slide. Little ones can also meet a miniature Sicilian donkey named Eeyore, as well as Charlotte the spider and Daisy the cow, a miniature Hereford heifer.</p>
 					<p class="italc cred">Courtesy of Fairytale Town</p>
 				</div>
 			</li>
@@ -1243,7 +1243,7 @@
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
 				<h3>Inland Exploring</h3>
-				<p>Attractions east of the coastline are just as dazzling as their oceanfront counterparts. Some of the coolest adventures might be right under your nose, as in <a href="http://www.visitcalifornia.com/feature/13-ways-go-underground-california">way underground</a>. Start with a tour of the massive underground chamber at Moaning Caverns Adventure Park—the vertical chamber is large enough to fit the Statue of Liberty. Families can go on guided walking tours into the cave, or opt to rappel down 165 feet into the cavern (best for older adventurers). Back above ground, take flight on zip lines that run above the foothills.</p>
+				<p>Attractions east of the coastline are just as dazzling as their oceanfront counterparts. Some of the coolest adventures might be right under your nose, as in <a href="http://www.visitcalifornia.com/feature/13-ways-go-underground-california" target="_blank">way underground</a>. Start with a tour of the massive underground chamber at Moaning Caverns Adventure Park—the vertical chamber is large enough to fit the Statue of Liberty. Families can go on guided walking tours into the cave, or opt to rappel down 165 feet into the cavern (best for older adventurers). Back above ground, take flight on zip lines that run above the foothills.</p>
 
 				<p>Continue heading inland to awe-inspiring Yosemite National Park. Book a room at the historic Tenaya Lodge, nicely situated as a base for exploring, and then go hiking or to attend one of the many nature talks that take place in the Yosemite Valley. Kids can participate in ranger programs, learning about the geological history of the area, or partake in an art class (all ages welcome) focused on nature.</p>
 			</div>
@@ -1302,7 +1302,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>The phrase 'great outdoors' gets new meaning in California. These spots serve up some of the most breathtaking views, landscapes, and excursions in the country—and even the world. Here's a must-see list for a family of explorers.</h2>
+				<h2>The phrase "great outdoors" gets new meaning in California. These spots serve up some of the most breathtaking views, landscapes, and excursions in the country—and even the world. Here's a must-see list for a family of explorers.</h2>
 			</div>
 		</div>
 	</div>
@@ -1392,7 +1392,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h3>A Don't-Leave-Without-One Burger </h3>
-				<p>Harry Snyder couldn't possibly have known what he was creating when he opened California's first drive-thru burger stand in 1948. Fast-forward to 2015, and the 300th <span class="bold">In-N-Out Burger</span> restaurant—now operating in five states—opens, a testament to the cult-like following. Go for the classic burgers, and stay for the famous shakes (choose from classic chocolate, strawberry and vanilla flavors, or order one of each!). For an insider experience, ask about the not-so-secret secret menu.</p>
+				<p>Harry Snyder couldn't possibly have known what he was creating when he opened California's first drive-thru burger stand in 1948. Fast-forward to 2015, and the 300th <span class="bold">In-N-Out Burger</span> restaurant—now operating in six states—opens, a testament to the cult-like following. Go for the classic burgers, and stay for the famous shakes (choose from classic chocolate, strawberry and vanilla flavors, or order one of each!). For an insider experience, ask about the not-so-secret secret menu.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -1412,7 +1412,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h3>American Classics</h3>
-				<p>If you're driving along Highway 101 and notice a 40-foot-tall wooden cowboy, you've reached <span class="bold">F. McClintock Saloon and Dining House</span>, a Pismo Beach (13 miles south of San Luis Obispo) restaurant that's been attracting tourists and locals alike for more than four decades. Inside, servers pour water from three feet above the glass, and kid-friendly fare includes skillet potatoes (drenched in cheese and bacon), nachos, and a variety of steaks and ribs.</p>
+				<p>If you're driving along Highway 101 and notice a 40-foot-tall wooden cowboy, you've reached <span class="bold">F. McLintock's Saloon and Dining House</span>, a Pismo Beach (13 miles south of San Luis Obispo) restaurant that's been attracting tourists and locals alike for more than four decades. Inside, servers pour water from three feet above the glass, and kid-friendly fare includes skillet potatoes (drenched in cheese and bacon), nachos, and a variety of steaks and ribs.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -1470,7 +1470,7 @@
 		<div class="row">
 			<div class="col-xs-6 col-md-6">
 				<p>I have lived in California almost my entire life, and I couldn't imagine raising my kids anywhere else! Southern California is unique because you can visit the beach, go to Disneyland, or play in the snow, usually within a two hour drive….you really can't find that anywhere else! If you haven't visited the Golden State yet, let us show you around. Here are 25 of our favorite spots with a lot of hidden gems in between!</p>
-				<p>Let's start with the fabulous amusement parks you will find here in Southern California. You can't pass these by:</p>
+				<p class="italc">Let's start with the fabulous amusement parks you will find here in Southern California. You can't pass these by:</p>
 				<h4>1</h4>
 				<h3>Disneyland</h3>
 				<p>When you think of California, you probably picture Mickey Mouse, and a trip to Disneyland is definitely something every child (and adult) will remember forever!</p>
@@ -1583,7 +1583,7 @@
 				<p>This is a hidden gem! If your childhood included playing in mud puddles, sliding down slippery slopes with your friends, and not caring about how dirty you got….your kids will get to experience that kind of down-home fun here too!</p>
 				<h4>13</h4>
 				<h3>Waterparks</h3>
-				<p>There are <a href="http://temeculablogs.com/water-parks-southern-california/">so many great waterparks in Southern California</a>, and since it is warm basically year round here you can visit them often!</p>
+				<p>There are so many great waterparks in Southern California</a>, and since it is warm basically year round here you can visit them often!</p>
 				<h4>14</h4>
 				<h3>The beach</h3>
 				<p>I'd be here all day if I listed all of the beaches we love, and since there are so many, we like visiting a new one each time we head out for some sun and sand. Two of our favorites are Carlsbad State Beach and San Clemente State Beach, because we lived there for many years. There is a playground, and lots of parking.</p>
@@ -1682,7 +1682,7 @@
 				<h4>25</h4>
 				<h3>Temecula Blueberry Company</h3>
 				<p>This is a fantastic hidden gem! There are many strawberry fields here and there, but it's rare to find a blueberry field where you can gather your own fruit right off the bush and bring it home that day. Offering movie nights during the summer, story time, and a few farm animals, it's a fun experience for little hands and delicious for everyone!</p>
-				<p class="italc">From <a href="http://temeculablogs.com/">The Typical Mom</a> family to yours, I hope you find several activities you love among our suggestions here and make memories with each other this year that will last a lifetime!</p>
+				<p class="italc">From <a href="http://temeculablogs.com/" target="_blank">The Typical Mom</a> family to yours, I hope you find several activities you love among our suggestions here and make memories with each other this year that will last a lifetime!</p>
 			</div>
 		</div>
 	</div>
@@ -1872,7 +1872,7 @@
 						<span class="best-for">Best for:</span>
 						</br>Advanced tricksters
 					</div>
-					<p>The legendary skate park at the <span class="bold">Magdalena Ecke YMCA</span> in Encinitas features a combination of street course, kidney-shaped bowl, and mix of ramp styles. It hosts three camps based on ability level: Technique for beginners, a tricks-focused intermediate/advanced camp, and a travel camp that takes skaters to other parks around San Diego. Parents can stay entertained in the quaint beachside town of Encinitas—simply relax on Moonlight Beach or grab a cup of house-roasted coffee at Lofty Bean and walk south down the 101 to browse gift shops and boutiques.</p>
+					<p>The legendary skate park at the <span class="bold">Magdalena Ecke YMCA</span> in Encinitas features a combination of street course, kidney-shaped bowl, and mix of ramp styles. It hosts three camps based on ability level: Technique for beginners, a tricks-focused intermediate/advanced camp, and a travel camp that takes skaters to other parks around San Diego. Parents can stay entertained in the quaint beachside town of Encinitas—simply relax on Moonlight Beach or grab a cup of house-roasted coffee at Lofty Coffee Co. and walk south down the 101 to browse gift shops and boutiques.</p>
 				</div>
 				<div class="scroll-list-box">
 					<div class="box-header">
@@ -1897,7 +1897,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
-				<h2>Just because Southern California is known for some of the best surfing in the country doesn't mean it's all about the big-wave beaches—there are plenty of family-friendly spots that you and your kids will love. After a day in the sun, settle in at one of these <a href="http://www.visitcalifornia.com/feature/kid-favorite-lodgings">kid-friendly lodgings</a>.</h2>
+				<h2>Just because Southern California is known for some of the best surfing in the country doesn't mean it's all about the big-wave beaches—there are plenty of family-friendly spots that you and your kids will love. After a day in the sun, settle in at one of these <a href="http://www.visitcalifornia.com/feature/kid-favorite-lodgings" target="_blank">kid-friendly lodgings</a>.</h2>
 			</div>
 		</div>
 	</div>
